Fix graph CSS on mobile

--- a/css/gamejam.css
+++ b/css/gamejam.css
@@ -52,13 +52,9 @@
     text-align: left;
 }
 
-#gamejam-stats {
-    display: flex;
-}
-
 #gamejam-stats > div {
     width: 500px;
-    height: calc(750px / 1.75);
+    height: calc(500px / 1.75);
 }
 
 @media (max-width: 500px) {
